--- a/Live Editor/index.html
+++ b/Live Editor/index.html
@@ -20,7 +20,7 @@
                     Live Code Editor
                 </div>
                 <div class="sub-title">
-                    <span># </span>AsmrProg
+                    <span># </span>Garv
                 </div>
             </div>
         </div>
