--- a/Capture Screen Shot/index.html
+++ b/Capture Screen Shot/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Day #65 - Capture Screenshot | AsmrProg</title>
+    <title>Capture Screenshot</title>
 </head>
 
 <body>
